[gd_scene load_steps=9 format=2]

[ext_resource path="res://models/ball_red.glb" type="PackedScene" id=1]
[ext_resource path="res://levels/base/scripts/ball.gd" type="Script" id=2]
[ext_resource path="res://scripts/follow_node.gd" type="Script" id=3]
[ext_resource path="res://prefabs/balls/audio/footstep_concrete_004.wav" type="AudioStream" id=4]
[ext_resource path="res://prefabs/balls/scripts/wall_raycast.gd" type="Script" id=5]
[ext_resource path="res://prefabs/balls/scripts/wall_raycasts.gd" type="Script" id=6]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.7

[sub_resource type="SphereShape" id=2]
radius = 0.35

[node name="Ball" type="Spatial"]
script = ExtResource( 2 )

[node name="RayCast" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
script = ExtResource( 3 )
target_path = NodePath("../RigidBody")

[node name="BounceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -22.374

[node name="RigidBody" type="RigidBody" parent="."]
collision_layer = 2
collision_mask = 9
physics_material_override = SubResource( 1 )
continuous_cd = true
linear_damp = 0.5
angular_damp = 2.5
__meta__ = {
"_edit_group_": true
}

[node name="Mesh" parent="RigidBody" instance=ExtResource( 1 )]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
shape = SubResource( 2 )

[node name="WallRayCasts" type="Spatial" parent="."]
script = ExtResource( 6 )
target_path = NodePath("../RigidBody")

[node name="LeftCast" type="RayCast" parent="WallRayCasts"]
enabled = true
cast_to = Vector3( -0.4, 0, 0 )
script = ExtResource( 5 )

[node name="RightCast" type="RayCast" parent="WallRayCasts"]
enabled = true
cast_to = Vector3( 0.4, 0, 0 )
script = ExtResource( 5 )

[node name="DownCast" type="RayCast" parent="WallRayCasts"]
enabled = true
cast_to = Vector3( 0, 0, 0.4 )
script = ExtResource( 5 )

[node name="UpCast" type="RayCast" parent="WallRayCasts"]
enabled = true
cast_to = Vector3( 0, 0, -0.4 )
script = ExtResource( 5 )

[node name="HitSound" type="AudioStreamPlayer" parent="WallRayCasts"]
stream = ExtResource( 4 )
volume_db = -14.087
[connection signal="hit_wall" from="WallRayCasts/LeftCast" to="WallRayCasts" method="_on_LeftCast_hit_wall"]
[connection signal="hit_wall" from="WallRayCasts/RightCast" to="WallRayCasts" method="_on_RightCast_hit_wall"]
[connection signal="hit_wall" from="WallRayCasts/DownCast" to="WallRayCasts" method="_on_DownCast_hit_wall"]
[connection signal="hit_wall" from="WallRayCasts/UpCast" to="WallRayCasts" method="_on_UpCast_hit_wall"]
